# Optimisation_TP4

./: CMakeLists.txt  ListeAdj.c  ListeAdj.h  README.md  cycle.c  cycle.h  ensemble.c  ensemble.h  filePrioritesMin.c  filePrioritesMin.h  graphe.c  kruskal.c  kruskal.h  liste.c  liste.h  main.c  makefile  prim.c  prim.h
